<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#ffffb3">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/lp"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginBottom="10sp"
        android:textColor="#000000"
        android:layout_marginTop="30dp">
    </TextView>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:hint="@string/username"
        android:layout_marginTop="50dp"
        android:inputType="phone"
        android:autofillHints="">
    </EditText>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:autofillHints="">
    </EditText>
    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_p"
        android:background="#68EF6D"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5sp"
        android:textColor="#ffffff">
    </Button>
    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="#FF9800"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp">

    </Button>

</LinearLayout>